$Id$

0.9.8:
	- further updates to Device::SerialPort and associated documentation

0.9.7: (23Jan2001)
	- implemented level 2 SNPP server
	- added SNPP config options
	- added "enabled" flag to PCs
	- added areacode handling on modems and PCs
	- corrected some queue file logic
	- added immediate notification of pages coming from SNPP clients
	- added parent-death awareness
	- corrected USR1 handling in PC queue runners
	- implemented priv dropping for spawned children (no more
	  craziness with setgid/setuid perl settings, etc)
	- created SNPP client
	- created email-parsing tool (with config file)
	- fixed signal handler inheritance bug

0.9.6: (12/31/2000)
	- ported KeesLog.pm's "new" function to use a hash (and fixed calls)
	- ported Modem.pm's "new" function to use a hash (and fixed calls)
	- started work on the SNPP Server functions
	- added documentation on how to port Device::SerialPort
	- added additional debugging to modem settings
	- created "dtrtime" to allow the DTR toggling timeout to be config'd
	- added logic to fully allow a "directly attached" modem to work
	- fixed a few small typos and other nonesense
	- improved handling of dropped-carrier conditions
	- changed device locking behavior to act like minicom and pppd

0.9.5: (09/27/2000)
	- hopefully fixed queue lock-up bug.  if not, it'll warn
	  now instead of looping forever.
	- added portability support for Solaris, and hopefully for
	  AIX and HPUX.  (and SCO, too.)
	- misc typos and corrections
	- fixed bug where modem settings we're being passed to
	  the modem when dialing a PC (PC defaults were being used)
	- started to correct problems with Device::SerialPort under
	  other OS's.
	- move kicker section of "chat" in Modem.pm to the front,
	  so kickers won't be sent during the last timeout cycle.
	- created an "answerretries" variable for the Paging Central
	  to match "answerwait" for some slow Paging Centrals.

0.9.4c: (07/28/2000, argh: deadly typo.  I should be more careful)