@@ -1,18 +1,18 @@
 # This file describes how an email message will be rewritten for paging
-# by the 'email2page' tool.
+# by the 'email2page' too.
 #
 # What to start the page with (must be in quotes)
 prefix:"|"
 # What to end the page with (must be in quotes)
-suffix:"-STOP-\n"
+suffix:"-STOP-"
 # How matched results should be joined (must be in quotes)
 headerjoin:"|"
 # How the headers and body should be joined (must be in quotes)
-headbodyjoin:"\n"
+headbodyjoin:"|"
 #
 # List of header substitutions, if any
-header:s/^From:\s+(.*)/F:$1/i;
 header:s/^Subject:\s+(.*)/S:$1/i;
+header:s/^From:\s+(.*)/F:$1/i;
 # rewrite all headers to their first three letters in their tag
 #header:s/^([^:]{1,3})[^:]*:(.*)/$1:$2/;
 # to leave all headers intact
